--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
               <div class="portfolio__data">
                 <h3 class="portfolio__title">zomato-Landing-Page-Clone</h3>
                 <p class="portfolio__description">
-                  Spotify Clone is a web app developed using HTML, CSS, and
+                  Zomato Clone is a web app developed using HTML, CSS, and
                   JavaScript.Zomato is an online food delivery and restaurant search and discovery platform that operates in India and other countries:Zomato's platform allows users to search for restaurants, place orders, read reviews, upload photos, and make payments. Contributions are welcome!
                 </p>
        
